Updated per minor comments.

--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -66,7 +66,7 @@ Finally, I would like to thank all of my friends and colleagues at UT for making
 %\include{preface}
 
 \begin{UTabstract}{Adam Kraus}
-Binary stars and higher-order multiple systems are a ubiquitous outcome of star formation, especially as the system mass increases. The companion mass-ratio distribution is a unique probe into the conditions of the collapsing cloud core and circumstellar disk(s) of the binary fragments. Inside $a \sim 1000$ AU the disks from the two forming stars can interact, and additionally companions can form directly through disk fragmentation. We should therefore expect the mass-ratio distribution of close companions to differ from that of wide companions. This prediction is difficult to test with intermediate-mass primary stars using traditional methods because the contrast ratios that would be required to detect low-mass companions at narrow working angles are not yet achievable. In this thesis, we present a spectroscopic method to detect and characterize close companions to a variety of stars. We demonstrate applications of the method to detection of stars and even planets around sun-like stars, and present the results of a survey searching for companions to A- and B-type stars. As part of the survey, we estimate the temperatures and surface gravity of most of the 341 sample stars, and derive their masses and ages. We additionally estimate the temperatures and masses of the 64 companions we find, 23 of which are new detections. We find that the mass-ratio distribution for our sample has a turnover near $q \approx 0.3$, in contrast to the scale-free power law that describes the widely separated binary systems. We take this characteristic scale as evidence that companions are accreting a significant of material through disk interactions as they form, and that the scale is largely set by the disk lifetime.
+Binary stars and higher-order multiple systems are a ubiquitous outcome of star formation, especially as the system mass increases. The companion mass-ratio distribution is a unique probe into the conditions of the collapsing cloud core and circumstellar disk(s) of the binary fragments. Inside $a \sim 1000$ AU the disks from the two forming stars can interact, and additionally companions can form directly through disk fragmentation. We might therefore expect the mass-ratio distribution of close companions to differ from that of wide companions. This prediction is difficult to test with intermediate-mass primary stars using traditional methods because the contrast ratios that would be required to detect low-mass companions at narrow working angles are not yet achievable. In this thesis, we present a spectroscopic method to detect and characterize close companions to a variety of stars. We demonstrate applications of the method to detection of stars and even planets around sun-like stars, and present the results of a survey searching for companions to A- and B-type stars. As part of the survey, we estimate the temperatures and surface gravity of most of the 341 sample stars, and derive their masses and ages. We additionally estimate the temperatures and masses of the 64 companions we find, 23 of which are new detections. We find that the mass-ratio distribution for our sample has a turnover near $q \approx 0.3$, in contrast to the scale-free power law that describes the widely separated binary systems. We take this characteristic scale as evidence that companions are accreting a significant of material through disk interactions as they form, and that the scale is largely set by the disk lifetime and the time at which the fragments form.
 
 \end{UTabstract}
 
@@ -87,7 +87,9 @@ Stellar multiplicity is an inevitable and common outcome of star formation, with
 
 \section{Binary Star Formation}
 
-The overall multiplicity rate and the distributions of mass ratio, period, and eccentricity of a binary star population place important constraints on the mode of binary star formation. While the period and eccentricity are altered by dynamical processing in the birth cluster, the present-day mass ratio of a binary system is a direct result of its formation \citep{Parker2013}. Most binary stars are thought to form via core fragmentation \citep{Boss1979, Boss1986, Bate1995}, in which a collapsing core fragments into two or more individual protostars. The number and initial masses of the fragments are set by the total core mass, as well as its rotation, turbulence, and its temperature and density structure. \citet{Machida2008} performed a parameter study by simulating several collapsing clouds with different levels of thermal, rotational, and magnetic energies. They found that the initial fragments occur on wide separations ($a \gtrsim 3 AU$) if the rotational energy dominates that of the magnetic field. If the magnetic energy dominates, however, then the fragmentation occurs much later and generates very close binary systems ($a \lesssim 1 AU$). 
+The overall multiplicity rate and the distributions of mass ratio, period, and eccentricity of a binary star population place important constraints on the mode of binary star formation. While the period and eccentricity are altered by dynamical processing in the birth cluster, the present-day mass ratio of a binary system is a direct result of its formation \citep{Parker2013}. There are several mechanisms by which binary stars may form: fission \citep{Lyttleton1953,  Lebovitz1974, Lebovitz1984}, in which a molecular core begins spinning fast enough as it collapses that it splits into two stars; various capture scenarios \citep[e.g.][]{Fabian1975}, in which two stars pass close enough to each other to dissipate kinetic energy and become bound; core fragmentation \citep[see e.g.][]{Boss1979, Boss1986, Bate1995}, in which a collapsing core develops two or more overdensities which then begin collapsing separately; and disk fragmentation \citep[see e.g.][]{Kratter2006, Stamatellos2011}, in which the circumstellar disk surrounding the primary star becomes gravitationally unstable and creates a secondary star. While the fission scenario was once thought to be important, it has since fallen out of favor because the viscous dissipation timescale, which would drive a spinning body towards fission, is much longer than the core collapse timescale \citep{Tohline2002} and because hydrodynamic simulations fail to cause the rotating core to actually split rather than just deform \citep{Tohline2001}. Likewise, the capture mechanism may function through star-disk interactions in which the passing star passes close enough to perturb the disk and dissipate kinetic energy but is unlikely to generate a significant fraction of the observed binary systems \citep{Tohline2002}.
+
+Most binary stars are thought to form via core fragmentation. The number and initial masses of the fragments are set by the total core mass, as well as its rotation, turbulence, and its temperature and density structure. \citet{Machida2008} performed a parameter study by simulating several collapsing clouds with different levels of thermal, rotational, and magnetic energies. They found that the initial fragments occur on wide separations ($a \gtrsim 3 AU$) if the rotational energy dominates that of the magnetic field. If the magnetic energy dominates, however, then the fragmentation occurs much later and generates very close binary systems ($a \lesssim 1 AU$). 
 
 \citet{Machida2008} do not follow the accretion or migration evolution of the fragments, but we can estimate that evolution from the relevant physics: If the fragments are well separated ($a \gtrsim 1000$ AU), they will evolve independently of each other, accreting mass from the core material onto their own protostellar disks and then onto the protostars themselves.  However, close fragments ($a \sim 100$ AU) will interact with each other; the protostellar disk may be truncated, destabilized, or form into a circumbinary disk if the separation is small enough \citep{Bate1997}. In addition, an unstable disk can fragment to form low-mass close companions \citep{Kratter2006, Stamatellos2011} directly. The mass ratios of close companions formed via either mechanism should be affected by preferential accretion. Most work has suggested that the disk material and high angular momentum infalling core material will preferentially accrete onto the lower mass companion as it migrates inward \citep{Bate1997, BBB2002}, although some recent work has suggested the preferential accretion may go in the opposite direction as a result of magnetic disk braking \citep{Zhao2013}.
 
@@ -109,9 +111,9 @@ Since intermediate-mass stars have main-sequence lifetimes of tens to hundreds o
 
 \section{Detection Methods}
 
-There are three methods traditionally used to search for companions to stars, whether they be stellar or planetary companions. The first is direct imaging, in which we take an image of the star and look for nearby point sources in the image. This can be either seeing-limited, in which case it is difficult to find companions inside $1''$ of the primary, or with adaptive optics systems on large-aperture telescopes, in which case the inner working angle is near the diffraction limit of the telescope. We can detect companions out to a few hundred mas from the primary with adaptive optics imaging methods \citep[see][for typical sensitivity curves of a binary survey]{DeRosa2014}, and even closer with more time-consuming and complicated observational techniques such as angular differential imaging \citep{Marois2006}. 
+There are three methods traditionally used to search for companions to stars, whether they be stellar or planetary companions. The first is direct imaging, in which we take an image of the star and look for nearby point sources in the image. This can be either seeing-limited, in which case it is difficult to find companions inside $1''$ of the primary, or with adaptive optics systems on large-aperture telescopes, in which case the inner working angle is near the diffraction limit of the telescope. We can detect companions outside of a few hundred mas from the primary with adaptive optics imaging methods \citep[see][for typical sensitivity curves of a binary survey]{DeRosa2014}, and even closer with more time-consuming and complicated observational techniques such as angular differential imaging \citep{Marois2006} and locally optimized combination of images \citep[LOCI][]{Lafreniere2007}.
 
-The second detection method is interferometry, in which multiple beams of light from the source are allowed to constructively or destructively interfere with each other before recording the light. In some cases, interferometry is done with multiple telescopes separated by several tens of meters, producing an effective aperture much larger than can be produced as a single mirror. In other cases, a mask is introduced in front of a single telescope to only allow light from certain beams through \citep[aperture masking,][]{Tuthill2000, Ireland2008}. Interferometry can usually achieve smaller working angles than imaging, but cannot achieve as high contrast \citep[see e.g.][]{Aldoretta2015}.
+The second detection method is interferometry, in which multiple beams of light from the source are allowed to constructively or destructively interfere with each other before recording the light. In some cases, interferometry is done with multiple telescopes separated by several tens of meters, producing an effective aperture much larger than can be produced as a single mirror. In other cases, a mask is introduced in front of a single telescope to only allow light from certain beams through \citep[aperture masking,][]{Tuthill2000, Ireland2008}. Interferometry can usually achieve smaller working angles than imaging, but cannot achieve as high contrast \citep[see e.g.][]{Aldoretta2015} because the atmospheric changes on short timescales, necessitating even shorter exposure times.
 
 The final traditional method useful in searching for stellar companions is radial velocity monitoring, in which the radial velocity of the star is measured many times over periods of years to decades. An unseen companion will cause the radial velocity of the primary star to oscillate. Unlike the previous two methods, the radial velocity method has no inner working angle; in fact, it works best at finding very close companions. The sensitivity falls off as the companion orbital separation increases, because the signal induced on the primary star decreases. The sensitivity also falls off as the number of spectral lines in the primary star spectrum falls, and as it rotation speed ($v\sin{i}$) increases. Careful radial velocity monitoring surveys are capable of detecting motion as small as $\sim 1 \mathrm{m\ s}^{-1}$ when observing slowly rotating solar-type stars \citep[e.g.][]{Wittenmyer2006, Fischer2009, Pepe2011}, but have difficulty achieving better than $\sim 1 \mathrm{km\ s}^{-1}$ when observing rapidly rotating hot stars \citep{Becker2015}.
 
@@ -119,7 +121,7 @@ Both imaging and interferometry can usually characterize the companion in a sing
 \begin{equation}
  f(M_1, M_2) = \frac{(M_2\sin{i})^3}{(M_1+M_2)^3}
  \end{equation}
- and only after monitoring the system for $1-2$ orbital periods. For companions on long-period ($\sim 10$ years) orbits, it is an extremely time-consuming method. In Chapter \ref{chap:dsd}, we introduce a spectroscopic method that is capable of both detecting and characterizing close companions in single observations.
+ and only after monitoring the system for $1-2$ orbital periods. For companions on long-period ($\sim 10$ years) orbits, it is an extremely time-consuming method. The exception is for double-lined binary systems (SB2s), for which the lines of both components are visible in the spectrum and vary enough that they can be resolved. In this case, spectroscopic companions can be fully characterized, and even provide model-independent masses, but still take $1-2$ orbital periods to measure. In Chapter \ref{chap:dsd}, we introduce a spectroscopic method that is capable of both detecting and characterizing close companions in single observations.
 
 
 \section{Previous Observational Results}
@@ -130,9 +132,9 @@ All of the distributions are much less certain for more massive stars. The reaso
 
 Binary systems with O-type primaries are mostly known through radial velocity monitoring surveys because they are so rare that only very few are amenable to imaging methods. \citet{Sana2013} measured the mass-ratio distribution of O-type binary systems in the Tarantula Nebula, finding it is well-fit by a power-law $f(q) \sim q^{-\gamma}$ with $\gamma = 1.00 \pm 0.40$, indicating a preference for companions much smaller than the primary. Other surveys with typically smaller sample sizes tend towards a more uniform mass-ratio distribution, albeit with large uncertainty \citep{Sana2012, Kiminki2012}. Imaging surveys, while incomplete, also find that the mass-ratio distribution is consistent with flat \citep{Peter2012} at wide separations.
 
-Intermediate-mass binary systems (primary spectral type A or B), while still rarer than solar-type binaries, are common enough that less biased surveys are possible. \citet{Kouwenhoven2007} combine imaging and radial velocity measurements of intermediate-mass stars in the young Scorpius OB2 association, and find that the mass-ratio distribution slightly favors low-mass companions ($\gamma \approx 0.4$). More recently, \citet{DeRosa2014} performed an adaptive optics imaging survey of nearby A-type stars, and found that the mass-ratio distribution is well-described by a power law with large slope, indicating a very strong preference for low-mass companions. They also found initial evidence that the mass-ratio distribution for companions inside $125$ AU has a much shallower power law slope than that of wide companions, and is consistent with flat. Their close companion subsample contained only 18 binary systems, and the result is complicated by the inherent difficulty of detecting close companions with low mass ratios in an imaging survey. 
+Intermediate-mass binary systems (primary spectral type A or B), while still rarer than solar-type binaries, are common enough that less biased surveys are possible. Building on the work in \citet{Shatsky2002}, \citet{Kouwenhoven2007} combine imaging and radial velocity measurements of intermediate-mass stars in the young Scorpius OB2 association, and find that the mass-ratio distribution favors low-mass companions ($\gamma \approx 0.4$). More recently, \citet{DeRosa2014} performed an adaptive optics imaging survey of a large sample of nearby field A-type stars, and found that the mass-ratio distribution is well-described by a power law with large slope, indicating a very strong preference for low-mass companions. They also found initial evidence that the mass-ratio distribution for companions inside $125$ AU has a much shallower power law slope than that of wide companions, and is consistent with flat. Their close companion subsample contained only 18 binary systems, and the result is complicated by the inherent difficulty of detecting close companions with low mass ratios in an imaging survey. 
 
-There are few systematic radial velocity surveys around normal intermediate-mass stars, which would provide a more complete picture of the close companion mass-ratio distribution. Chemically peculiar Am stars are typically slow rotators, a fact typically attributed to tidal braking from binary companions; they thus form a highly biased sample of intermediate-mass stars. Nonetheless, it is interesting to note that they have a mass-ratio distribution which peaks near $q \sim 0.5$ \citep{Vuissoz2004}, an entirely different form than the power law distribution found around chemically normal stars at wide separations.
+There are few systematic radial velocity surveys around normal intermediate-mass stars, which would provide a more complete picture of the close companion mass-ratio distribution. Chemically peculiar Am stars are typically slow rotators, a fact typically attributed to tidal braking from binary companions; they thus form a highly biased sample of intermediate-mass stars that contains almost exclusively close binary systems. Nonetheless, it is interesting to note that they have a mass-ratio distribution which peaks near $q \sim 0.5$ \citep{Vuissoz2004}, an entirely different form than the power law distribution found around chemically normal stars at wide separations.
 
 The bulk of this thesis is devoted to a spectroscopic survey of field intermediate-mass stars. We introduce the general method in great detail in Chapter \ref{chap:dsd}. We then detour to discuss TelFit, a tool we created to fit and remove the contamination from Earth's atmosphere in Chapter \ref{chap:telfit}. We apply a variant of the direct spectral detection method to two side projects in Chapters \ref{chap:psi1dra} and \ref{chap:hotjup}. We then describe the pilot and main survey program in Chapters \ref{chap:pilot} and \ref{chap:survey} (respectively), and provide overall survey conclusions in Chapter \ref{chap:conclusions}.
 
@@ -186,7 +188,7 @@ The bulk of this thesis is devoted to a spectroscopic survey of field intermedia
 
 \section{Summary of Key Results}
 
-In this thesis, we developed and characterized a spectral method to find companions to stars with a variety of temperatures. The method can be summarized as a two step process: first, prepare the spectrum by attempting to remove the signal from the primary star spectrum. The second step is to cross-correlate the prepared spectra against a grid of model spectra spanning a large parameter space. The cross correlation function (CCF) attempts to match the model spectrum template against the prepared data; if it finds a match for the template in the data then the CCF will have a strong peak at the radial velocity of the companion.
+In this thesis, we developed and characterized a spectral search method to find companions to stars with a variety of temperatures. The method can be summarized as a two step process: first, prepare the spectrum by attempting to remove the signal from the primary star spectrum. The second step is to cross-correlate the prepared spectra against a grid of model spectra spanning a large parameter space. The cross correlation function (CCF) attempts to match the model spectrum template against the prepared data; if it finds a match for the template in the data then the CCF will have a strong peak at the radial velocity of the companion.
 
 We present two different ways to prepare the spectrum. In Chapter \ref{chap:dsd}, we discuss the method we use for our main survey program (Chapters \ref{chap:pilot} and \ref{chap:survey}), which takes advantage of the fact that the primary star spectrum is very simple compared to the expected companion spectrum. In this case, we prepare the spectra for a companion search by simply subtracting a low-pass filtered version of the original spectrum, a process known as unsharp masking. We extensively characterize the direct spectral detection method for this type of primary star, estimating the companion sensitivity as well as the accuracy of the companion parameters we derive. We find that our method is capable of detecting late-K to early-M spectral type companions to A0V primary stars, and can detect them \emph{independent of the orbital separation}. As the primary star increases in mass and temperature, the coolest detectable companion gets hotter; however, the lowest detectable mass ratio decreases. 
 
