--- a/paper6.tex
+++ b/paper6.tex
@@ -1,6 +1,6 @@
 
 \chapter{The Inner Mass-Ratio Distribution of Intermediate-Mass Stars\footnote{
-    This chapter has been submitted for publication to the Astronomical Journal, but is not yet published.
+    This chapter has been accepted for publication to the Astronomical Journal, but is not yet published.
 }}
 \label{chap:survey}
 
@@ -347,7 +347,7 @@ We already know $P(q|\vec{\theta})$ (Equations \ref{paper6_eqn:P1} - \ref{paper6
 
 With the fitted malmquist-correction polynomial, we then substitute $P(q|\vec{\theta}, \mathrm{obs})$ everywhere $P(q|\vec{\theta})$ appears in Equation \ref{paper6_eqn:money}.
 
-We summarize the parameters in Table \ref{paper6_tab:parameters}, and show the resulting fits in Figure \ref{paper6_fig:mrd}. The $1\sigma$ uncertainties in the bin heights from the histogram model are shown as error bars, and we overplot 300 samples of the lognormal distribution fit to show the spread allowed by the data. The best-fit power law is plotted with a red dot-dashed line. We also estimate the mass-ratio distribution expected from random pairing of the Kroupa Initial Mass Function (IMF), and show the result in yellow. We estimate the distribution by drawing 100000 primary stars from the IMF with masses between $1.5 < M/M_{\odot} < 20$. We then draw companions from the same IMF, with the restriction that the companion has a lower mass than the primary. The result plotted in yellow in Figure \ref{paper6_fig:mrd} is a gaussian kernel density estimate of the resulting mass ratios, with a bandwidth of $0.05$.
+We summarize the parameters in Table 7.5, and show the resulting fits in Figure \ref{paper6_fig:mrd}. The $1\sigma$ uncertainties in the bin heights from the histogram model are shown as error bars, and we overplot 300 samples of the lognormal distribution fit to show the spread allowed by the data. The best-fit power law is plotted with a red dot-dashed line. We also estimate the mass-ratio distribution expected from random pairing of the Kroupa Initial Mass Function (IMF), and show the result in yellow. We estimate the distribution by drawing 100000 primary stars from the IMF with masses between $1.5 < M/M_{\odot} < 20$. We then draw companions from the same IMF, with the restriction that the companion has a lower mass than the primary. The result plotted in yellow in Figure \ref{paper6_fig:mrd} is a gaussian kernel density estimate of the resulting mass ratios, with a bandwidth of $0.05$.
 
 
 \begin{figure}[t]
