--- a/references.bib
+++ b/references.bib
@@ -4579,6 +4579,42 @@ archivePrefix = "arXiv",
 
 
 
+@ARTICLE{Fabian1975,
+   author = {{Fabian}, A.~C. and {Pringle}, J.~E. and {Rees}, M.~J.},
+    title = "{Tidal capture formation of binary systems and X-ray sources in globular clusters}",
+  journal = {\mnras},
+ keywords = {Binary Stars, Globular Clusters, Stellar Radiation, Tides, X Ray Astronomy, X Ray Stars, Error Analysis, Gravitational Effects, Stellar Luminosity, Variable Stars},
+     year = 1975,
+    month = aug,
+   volume = 172,
+    pages = {15p-18p},
+      doi = {10.1093/mnras/172.1.15P},
+   adsurl = {http://adsabs.harvard.edu/abs/1975MNRAS.172P..15F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Lafreniere2007,
+   author = {{Lafreni{\`e}re}, D. and {Marois}, C. and {Doyon}, R. and {Nadeau}, D. and 
+	{Artigau}, {\'E}.},
+    title = "{A New Algorithm for Point-Spread Function Subtraction in High-Contrast Imaging: A Demonstration with Angular Differential Imaging}",
+  journal = {\apj},
+   eprint = {astro-ph/0702697},
+ keywords = {Instrumentation: Adaptive Optics, Stars: Planetary Systems, Stars: Imaging, Techniques: High Angular Resolution, Techniques: Image Processing},
+     year = 2007,
+    month = may,
+   volume = 660,
+    pages = {770-780},
+      doi = {10.1086/513180},
+   adsurl = {http://adsabs.harvard.edu/abs/2007ApJ...660..770L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+
 
 @comment{BibDesk URL Groups{
 <?xml version="1.0" encoding="UTF-8"?>
