Fixed a few minor things.

--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -87,7 +87,7 @@ Stellar multiplicity is an inevitable and common outcome of star formation, with
 
 \section{Binary Star Formation}
 
-The overall multiplicity rate and the distributions of mass ratio, period, and eccentricity of a binary star population place important constraints on the mode of binary star formation. While the period and eccentricity are altered by dynamical processing in the birth cluster, the present-day mass ratio of a binary system is a direct result of its formation \citep{Parker2013}. There are several mechanisms by which binary stars may form: fission \citep{Lyttleton1953,  Lebovitz1974, Lebovitz1984}, in which a molecular core begins spinning fast enough as it collapses that it splits into two stars; various capture scenarios \citep[e.g.][]{Fabian1975}, in which two stars pass close enough to each other to dissipate kinetic energy and become bound; core fragmentation \citep[see e.g.][]{Boss1979, Boss1986, Bate1995}, in which a collapsing core develops two or more overdensities which then begin collapsing separately; and disk fragmentation \citep[see e.g.][]{Kratter2006, Stamatellos2011}, in which the circumstellar disk surrounding the primary star becomes gravitationally unstable and creates a secondary star. While the fission scenario was once thought to be important, it has since fallen out of favor because the viscous dissipation timescale, which would drive a spinning body towards fission, is much longer than the core collapse timescale \citep{Tohline2002} and because hydrodynamic simulations fail to cause the rotating core to actually split rather than just deform \citep{Tohline2001}. Likewise, the capture mechanism may function through star-disk interactions in which the passing star passes close enough to perturb the disk and dissipate kinetic energy but is unlikely to generate a significant fraction of the observed binary systems \citep{Tohline2002}.
+The overall multiplicity rate and the distributions of mass ratio, period, and eccentricity of a binary star population place important constraints on the mode of binary star formation. While the period and eccentricity are altered by dynamical processing in the birth cluster, the present-day mass ratio of a binary system is a direct result of its formation \citep{Parker2013}. There are several mechanisms by which binary stars may form: fission \citep{Lyttleton1953,  Lebovitz1974, Lebovitz1984}, in which a molecular core begins spinning fast enough as it collapses that it splits into two stars; various capture scenarios \citep[e.g.][]{Fabian1975}, in which two stars pass close enough to each other to dissipate kinetic energy and become bound; core fragmentation \citep[see e.g.][]{Boss1979, Boss1986, Bate1995}, in which a collapsing core develops two or more overdensities which then begin collapsing separately; and disk fragmentation \citep[see e.g.][]{Kratter2006, Stamatellos2011}, in which the circumstellar disk surrounding the primary star becomes gravitationally unstable and creates a secondary star. While the fission scenario was once thought to be important, it has since fallen out of favor because the viscous dissipation timescale, which would drive a spinning body towards fission, is much longer than the core collapse timescale \citep{Tohline2002} and because hydrodynamic simulations fail to cause the rotating core to actually split rather than just deform \citep{Tohline2001}. Likewise, the capture mechanism may function through star-disk interactions in which one star passes close enough to another star to perturb its disk and dissipate kinetic energy, but is unlikely to generate a significant fraction of the observed binary systems \citep{Tohline2002}.
 
 Most binary stars are thought to form via core fragmentation. The number and initial masses of the fragments are set by the total core mass, as well as its rotation, turbulence, and its temperature and density structure. \citet{Machida2008} performed a parameter study by simulating several collapsing clouds with different levels of thermal, rotational, and magnetic energies. They found that the initial fragments occur on wide separations ($a \gtrsim 3 AU$) if the rotational energy dominates that of the magnetic field. If the magnetic energy dominates, however, then the fragmentation occurs much later and generates very close binary systems ($a \lesssim 1 AU$). 
 
@@ -111,9 +111,9 @@ Since intermediate-mass stars have main-sequence lifetimes of tens to hundreds o
 
 \section{Detection Methods}
 
-There are three methods traditionally used to search for companions to stars, whether they be stellar or planetary companions. The first is direct imaging, in which we take an image of the star and look for nearby point sources in the image. This can be either seeing-limited, in which case it is difficult to find companions inside $1''$ of the primary, or with adaptive optics systems on large-aperture telescopes, in which case the inner working angle is near the diffraction limit of the telescope. We can detect companions outside of a few hundred mas from the primary with adaptive optics imaging methods \citep[see][for typical sensitivity curves of a binary survey]{DeRosa2014}, and even closer with more time-consuming and complicated observational techniques such as angular differential imaging \citep{Marois2006} and locally optimized combination of images \citep[LOCI][]{Lafreniere2007}.
+There are three methods traditionally used to search for companions to stars, whether they be stellar or planetary companions. The first is direct imaging, in which we take an image of the star and look for nearby point sources in the image. This can be either seeing-limited, in which case it is difficult to find companions inside $1''$ of the primary, or with adaptive optics systems on large-aperture telescopes, in which case the inner working angle is near the diffraction limit of the telescope. We can detect companions outside of a few hundred mas from the primary with adaptive optics imaging methods \citep[see][for typical sensitivity curves of a binary survey]{DeRosa2014}, and even closer with more time-consuming and complicated observational techniques such as angular differential imaging \citep{Marois2006} and locally optimized combination of images \citep[LOCI,][]{Lafreniere2007}.
 
-The second detection method is interferometry, in which multiple beams of light from the source are allowed to constructively or destructively interfere with each other before recording the light. In some cases, interferometry is done with multiple telescopes separated by several tens of meters, producing an effective aperture much larger than can be produced as a single mirror. In other cases, a mask is introduced in front of a single telescope to only allow light from certain beams through \citep[aperture masking,][]{Tuthill2000, Ireland2008}. Interferometry can usually achieve smaller working angles than imaging, but cannot achieve as high contrast \citep[see e.g.][]{Aldoretta2015} because the atmospheric changes on short timescales, necessitating even shorter exposure times.
+The second detection method is interferometry, in which multiple beams of light from the source are allowed to constructively or destructively interfere with each other before recording the light. In some cases, interferometry is done with multiple telescopes separated by several tens of meters, producing an effective aperture much larger than can be produced as a single mirror. In other cases, a mask is introduced in front of a single telescope to only allow light from certain beams through \citep[aperture masking,][]{Tuthill2000, Ireland2008}. Interferometry can usually achieve smaller working angles than imaging, but cannot achieve as high contrast \citep[see e.g.][]{Aldoretta2015} because the atmosphere changes on short timescales, necessitating even shorter exposure times.
 
 The final traditional method useful in searching for stellar companions is radial velocity monitoring, in which the radial velocity of the star is measured many times over periods of years to decades. An unseen companion will cause the radial velocity of the primary star to oscillate. Unlike the previous two methods, the radial velocity method has no inner working angle; in fact, it works best at finding very close companions. The sensitivity falls off as the companion orbital separation increases, because the signal induced on the primary star decreases. The sensitivity also falls off as the number of spectral lines in the primary star spectrum falls, and as it rotation speed ($v\sin{i}$) increases. Careful radial velocity monitoring surveys are capable of detecting motion as small as $\sim 1 \mathrm{m\ s}^{-1}$ when observing slowly rotating solar-type stars \citep[e.g.][]{Wittenmyer2006, Fischer2009, Pepe2011}, but have difficulty achieving better than $\sim 1 \mathrm{km\ s}^{-1}$ when observing rapidly rotating hot stars \citep{Becker2015}.
 
@@ -121,7 +121,7 @@ Both imaging and interferometry can usually characterize the companion in a sing
 \begin{equation}
  f(M_1, M_2) = \frac{(M_2\sin{i})^3}{(M_1+M_2)^3}
  \end{equation}
- and only after monitoring the system for $1-2$ orbital periods. For companions on long-period ($\sim 10$ years) orbits, it is an extremely time-consuming method. The exception is for double-lined binary systems (SB2s), for which the lines of both components are visible in the spectrum and vary enough that they can be resolved. In this case, spectroscopic companions can be fully characterized, and even provide model-independent masses, but still take $1-2$ orbital periods to measure. In Chapter \ref{chap:dsd}, we introduce a spectroscopic method that is capable of both detecting and characterizing close companions in single observations.
+ and only after monitoring the system for $1-2$ orbital periods. For companions on long-period ($\sim 10$ years) orbits, it is an extremely time-consuming method. The exception is for double-lined binary systems (SB2s), for which the lines of both components are visible in the spectrum and vary enough that they can be resolved. In this case, spectroscopic companions can be fully characterized, and even provide model-independent masses, but still take $1-2$ orbital periods to measure. In Chapter \ref{chap:dsd}, we introduce a spectroscopic method that is capable of both detecting and characterizing close companions in single observations, with no dependence on separation or inner working angle.
 
 
 \section{Previous Observational Results}
@@ -204,7 +204,7 @@ We find that the companions we detect, which are necessarily all close companion
 
 \section{Theoretical Implications}
 
-The mass-ratio distribution derived in this work has a very different form than the power law found for companions at wide separations. This is likely a result of the companion's accretion history. If it started at a wide separation, it may have migrated in by accreting a significant fraction of its final mass from core material, a process that can change the separation by 1-2 orders of magnitude \citep{Bate2000}. Thus if the companion formed with a small ratio at large separations, its final configuration will be a close companion with large mass ratio. Companions that migrated to inside of $\sim 100$ AU will likely have large mass ratios due to this process.
+The mass-ratio distribution derived in this work has a very different form than the power law found for companions at wide separations. This is likely a result of the companion's accretion history. If it started at a wide separation, it may have migrated in by accreting a significant fraction of its final mass from core material, a process that can change the separation by 1-2 orders of magnitude \citep{Bate2000}. Thus if the companion formed with a small mass ratio at large separations, its final configuration will be a close companion with large mass ratio. Companions that migrated to inside of $\sim 100$ AU will likely have large mass ratios due to this process.
 
 Likewise, if the companion formed within a few tens to hundred AU from its primary it will preferentially accrete matter from the dense primary star disk as well as the infalling core material \citep{BBB2002}. The result would be a depletion of low mass-ratio companions as they become intermediate to high mass-ratio companions. The characteristic scale of $\sim 0.3$ that we see in Figure \ref{paper6_fig:mrd} would then be related to the disk timescale and the time at which the fragments form, since with enough time the preferential accretion would push all companions to $q = 1.0$. 
 
